[project]
name = "gf-mqtt-client"
version = "0.1.5"
description = "A Python module for MQTT communication inspired by CoAP, with async support and microcontroller compatibility."
authors = [{ name = "Matthew Davidson", email = "matthew.davidson@generalfusion.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
dependencies = [
    "aiomqtt>=2.4.0",
    "dotenv>=0.9.9",
    "msgpack>=1.1.1",
    "orjson>=3.11.3",
    "paho-mqtt>=1.6.1",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
log_cli_level = "INFO"
log_file_level = "INFO"
log_file = "test.log"
log_cli_format = "%(client_id)s %(levelname)-8s %(message)s"
log_file_format = "%(asctime)s %(levelname)-8s [%(client_id)s] %(message)s"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-xdist>=3.8.0",
]
